--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
         </div>
 
         <div class="project">
-            <h3>Tic Tac Toe (Java)</h3>
+            <h3>Caro - Five in a roll (Java)</h3>
             <p>A game using the Minimax algorithm for an intelligent AI opponent with a graphical user interface.</p>
+            <p><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on Github
         </div>
 
         <div class="project">
@@ -175,7 +176,7 @@
             <li>Programming Languages: Java, Python, C/C++, SQL, HTML, CSS</li>
             <li>Game Development: Unity</li>
             <li>Developer Tools: Git, VS, IntelliJ, WSL, MySQL</li>
-            <li>Libraries: pandas, NumPy, Matplotlib, Seaborn, Scikit Learn, </li>
+            <li>Libraries: pandas, NumPy, Matplotlib, Seaborn, Scikit Learn </li>
             <li>Core Knowledge: OOP, Data Structures, Data Analysis, Algorithms, Machine Learning</li>
         </ul>
     </section>
