--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="project">
             <h3>Caro - Five in a roll (Java)</h3>
             <p>A game using the Minimax algorithm for an intelligent AI opponent with a graphical user interface.</p>
-            <p><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on Github
+            <p><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on Github</a></p>
         </div>
 
         <div class="project">
