--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
 
         <div class="project">
-            <h3>Caro - Five in a roll (Java)</h3>
+            <h3>Caro - Five in a roll (Python)</h3>
             <p>A game using the Minimax algorithm for an intelligent AI opponent with a graphical user interface.</p>
             <p><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on Github</a></p>
         </div>
