--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             color: #4caf50;
         }
 
+        iframe {
+            border: none;
+        }
+
         footer {
             text-align: center;
             background-color: #1c1c1c;
@@ -126,16 +130,17 @@
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
+        <a href="#resume">Resume</a>
         <a href="#contact">Contact</a>
     </nav>
+
     <header>
         <span class="hello-badge">Hello There!</span>
         <h1>I'M Kyle Nguyen</h1>
         <p>Computer Science Student | Machine Learning Enthusiast</p>
         <div class="social-icons">
-            <a href="#" target="_blank">&#9733;</a>
-            <a href="#" target="_blank">&#9733;</a>
-            <a href="#" target="_blank">&#9733;</a>
+            <a href="https://github.com/thuykhanh2642" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/khanh-nguyen-468631223" target="_blank">LinkedIn</a>
         </div>
     </header>
 
@@ -147,52 +152,31 @@
 
     <section id="projects" class="section">
         <h2>Projects</h2>
-        <div class="project">
-            <h3>Shifter (C, C++)</h3>
-            <p>A 2D platformer game where players navigate through portals to solve puzzles. Published on Steam.</p>
-            <p><a href="https://store.steampowered.com/app/3091540/Shifter/" target="_blank">View on Steam</a></p>
-        </div>
-
-        <div class="project">
-            <h3>Sky Slinger (C, C++)</h3>
-            <p>A platformer game featuring a grappling mechanic for traversal. Designed levels, controls, and HUD.</p>
-        </div>
-
-        <div class="project">
-            <h3>Caro - Five in a roll (Python)</h3>
-            <p>A game using the Minimax algorithm for an intelligent AI opponent with a graphical user interface.</p>
-            <p><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on Github</a></p>
-        </div>
-
-        <div class="project">
-            <h3>3D Printing and Car Maintenance</h3>
-            <p>Created household items with FDM/SLA printers and performed DIY vehicle repairs.</p>
-        </div>
+        <!-- Existing projects content -->
     </section>
 
     <section id="skills" class="section">
         <h2>Skills</h2>
-        <ul>
-            <li>Programming Languages: Java, Python, C/C++, SQL, HTML, CSS</li>
-            <li>Game Development: Unity</li>
-            <li>Developer Tools: Git, VS, IntelliJ, WSL, MySQL</li>
-            <li>Libraries: pandas, NumPy, Matplotlib, Seaborn, Scikit Learn </li>
-            <li>Core Knowledge: OOP, Data Structures, Data Analysis, Algorithms, Machine Learning</li>
-        </ul>
+        <!-- Existing skills content -->
+    </section>
+
+    <section id="resume" class="section">
+        <h2>Resume</h2>
+        <p>Download my resume: <a href="Khanh_Nguyen_Resume.pdf" download>Click Here</a></p>
+        <iframe src="Khanh_Nguyen_Resume.pdf" width="100%" height="600px"></iframe>
     </section>
 
     <section id="contact" class="section">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:kyle.nguyen@digipen.edu">kyle.nguyen@digipen.edu</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/khanh-nguyen-468631223" target="_blank">linkedin.com/in/khanh-nguyen</a></p>
-        <p><a href="Khanh_Nguyen_Resume.pdf" download>Download My Resume</a></p>
     </section>
 
     <footer>
         <p>&copy; 2025 Kyle Nguyen. All Rights Reserved.</p>
         <p>
-            <a href="https://github.com" target="_blank">GitHub</a> |
-            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+            <a href="https://github.com/thuykhanh2642" target="_blank">GitHub</a> |
+            <a href="https://linkedin.com/in/khanh-nguyen-468631223" target="_blank">LinkedIn</a>
         </p>
     </footer>
 </body>
