--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kyle Nguyen | Portfolio</title>
+    <title>Khanh Nguyen | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -162,7 +162,7 @@
 
     <section id="resume" class="section">
         <h2>Resume</h2>
-        <p>Download my resume: <a href="Khanh_Nguyen_Resume.pdf" download>Click Here</a></p>
+        <a href="KhanhNguyen_Resume.pdf" download>Download my resume</a>
         <iframe src="Khanh_Nguyen_Resume.pdf" width="100%" height="600px"></iframe>
     </section>
 
@@ -173,7 +173,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Kyle Nguyen. All Rights Reserved.</p>
+        <p>&copy; 2025 Khanh Nguyen. All Rights Reserved.</p>
         <p>
             <a href="https://github.com/thuykhanh2642" target="_blank">GitHub</a> |
             <a href="https://linkedin.com/in/khanh-nguyen-468631223" target="_blank">LinkedIn</a>
