--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <header>
         <span class="hello-badge">Hello There!</span>
-        <h1>I'M Kyle Nguyen</h1>
+        <h1>I'm Khanh Nguyen</h1>
         <p>Computer Science Student | Machine Learning Enthusiast</p>
     </header>
 
