--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
 
         <div class="project">
             <h3>Stock Trend Prediction Model (Python, Machine Learning)</h3>
-            <p>Developed a machine learning model to predict stock trends using seven years of historical financial data.</p>
-            <p>Engineered features like RSI, EMA, and volatility to improve model performance and reduce overfitting.</p>
-            <p>Experimented with multiple ML models, including Lasso Regression and Random Forest Regressor, achieving robust evaluations with TimeSeriesSplit.</p>
+            <p>Developing a machine learning model to predict stock trends using seven years of historical financial data.</p>
+            <p>Engineered features like RSI, EMA, momentum, etc to improve model performance and reduce overfitting.</p>
+            <p>Experimented with multiple ML models, including Lasso Regression and Random Forest Regressor, along with classifiers like Random Forest classifier, achieving robust evaluations with TimeSeriesSplit.</p>
         </div>
 
         <div class="project">
