--- a/index.html
+++ b/index.html
@@ -128,36 +128,54 @@
         <p>Computer Science Student | Machine Learning Enthusiast</p>
     </header>
 
+    <section id="about" class="section">
+        <h2>About Me</h2>
+        <p>A Computer Science student with a strong interest in Machine Learning, Software Development, and Game Development. I have experience in developing machine learning models, working on stock trend predictions, and creating interactive applications. When I'm not coding, I enjoy 3D printing and working on DIY projects. Feel free to explore my portfolio and reach out!</p>
+    </section>
+    
+
     <section id="projects" class="section">
         <h2>Projects</h2>
 
         <div class="project">
-            <h3>Stock Trend Prediction Model (Python, Machine Learning)</h3>
-            <p>Developing a machine learning model to predict stock trends using seven years of historical financial data.</p>
-            <p>Engineered features like RSI, EMA, momentum, etc to improve model performance and reduce overfitting.</p>
-            <p>Experimented with multiple ML models, including Lasso Regression and Random Forest Regressor, along with classifiers like Random Forest classifier, achieving robust evaluations with TimeSeriesSplit.</p>
+            <h3>Stock Prediction Model (Python, Machine Learning, Streamlit)</h3>
+            <ul>
+                <li>Implemented TimeSeriesSplit cross-validation and RandomizedSearchCV for hyperparameter tuning.</li>
+                <li>Developed an interactive Streamlit dashboard for real-time stock trend analysis.</li>
+                <li>Achieved an F1-score of 0.76 for predicting price increases.</li>
+            </ul>
         </div>
 
         <div class="project">
             <h3>Shifter (C, C++)</h3>
-            <p>A 2D platformer game where players navigate through portals to solve puzzles. Published on Steam and Itch.io.</p>
-            <p><a href="https://store.steampowered.com/app/3091540/Shifter/" target="_blank">View on Steam</a></p>
+            <ul>
+                <li><a href="https://store.steampowered.com/app/3091540/Shifter/" target="_blank">View on Steam</a></li>
+                <li>Developed a published 2D platformer on Steam with a unique puzzle-solving mechanic.</li>
+                <li>Designed a core engine system including sound, UI, and game progress-saving features.</li>
+            </ul>
         </div>
 
         <div class="project">
             <h3>Sky Slinger (C, C++)</h3>
-            <p>Developed a 2D platformer game featuring a unique grappling mechanic for traversal. Designed levels, controls, and HUD to enhance gameplay.</p>
-        </div>
+            <ul>
+                <li>Developed a 2D platformer game featuring a unique grappling mechanic for traversal. Designed levels, controls, and HUD to enhance gameplay.</li>
+            </ul>
+    </div>
 
         <div class="project">
             <h3>Caro - Five in a Roll (Python)</h3>
-            <p>Created a game using the Minimax algorithm for an intelligent AI opponent. Designed a graphical user interface for seamless user interaction.</p>
-            <p><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on GitHub</a></p>
-        </div>
+            <ul>
+                <li>Implemented a Tic-Tac-Toe-inspired game using Q-Learning for an AI opponent.</li>
+                <li>Designed an interactive graphical user interface for seamless gameplay.</li>
+                <li><a href="https://github.com/thuykhanh2642/Caro-Five-in-a-roll" target="_blank">View on GitHub</a></li>
+            </ul>
+
 
         <div class="project">
             <h3>3D Printing and Car Maintenance</h3>
-            <p>Utilized FDM/SLA printers to create household items and conducted DIY vehicle repairs, showcasing problem-solving and technical skills.</p>
+            <ul>
+                <li>Utilized FDM/SLA printers to create household items and conducted DIY vehicle repairs, household items, etc.</li>
+            </ul>
         </div>
 
     </section>
@@ -175,7 +193,7 @@
 
     <section id="resume" class="section">
         <h2>Resume</h2>
-        <p>Download my resume: <a href="KhanhNguyen_Resume.pdf" download>Click Here</a></p>
+        <p>Download my resume: <a href="KhanhNguyen_Resume.pdf" >Click Here</a></p>
         <iframe src="KhanhNguyen_Resume.pdf" width="100%" height="600px"></iframe>
     </section>
 
